practice/job-3/nginx-deployment.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: job-3

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: job-3 
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: nginx
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx:1.15.2
        imagePullPolicy: IfNotPresent
        name: nginx
        resources: {}
        livenessProbe:
          initialDelaySeconds: 2
          periodSeconds: 3
          exec:
            command:
            - cat
            - /data/pic1.png
        volumeMounts:
        - name: nginx-conf-cm
          mountPath: /etc/nginx/nginx.conf
          subPath: etc/nginx/nginx.conf
        - name: nfs-volume
          mountPath: /data/
      volumes:
      - name: nginx-conf-cm 
        configMap:
          defaultMode: 420
          name: nginx-config 
          items:
          - key: nginx.conf
            path: etc/nginx/nginx.conf
      - name: nfs-volume
        nfs:
          server: 178.104.163.104
          path: "/job-3"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
